--- a/minor_project-1/page2.html
+++ b/minor_project-1/page2.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="page2style.css">
-    <title>Minor 1</title>
+    <title>Thank You!</title>
 </head>
 <body>
     <div id="top">
